add note about developing locally

--- a/.notes.md
+++ b/.notes.md
@@ -1,5 +1,12 @@
 # Notes
 
+## Local Dev
+
+Run locally on `http://localhost:8000/` with:
+`$ make devserver`
+
+## Publishing
+
 Run Pelican to generate the static HTML files in output:  
 `$ pelican content -o output -s publishconf.py`
 
